--- a/style.css
+++ b/style.css
@@ -6,12 +6,12 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
 }
 
-#login-form {
+.form {
   background-color: #fff;
   padding: 20px;
+  margin: 20px;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
@@ -25,8 +25,9 @@ form {
 }
 
 input[type="text"],
-input[type="password"] {
-  width: 100%;
+input[type="password"],
+input[type="email"] {
+  width: calc(100% - 22px);
   padding: 10px;
   margin: 10px 0;
   border: 1px solid #ccc;
